@@ -1,3 +1,9 @@
+2015-07-10 Gregory L. Lee <lee218@llnl.gov>
+	* : DySectAPI filter function should only merge packets with same tag
+
+2015-07-08 Gregory L. Lee <lee218@llnl.gov>
+	* : DySectAPI filter should process messages in received order
+
 2015-07-02 Gregory L. Lee <lee218@llnl.gov>
 	* : Fixes for probes pending library load
 
